welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:5: error: not found: value lisMessage
		lisMessage() match{
                ^BDR2:6: error: not found: value droitr
		case "R"=>droitr();avance();
                          ^BDR2:20: error: not found: value vrecule
		case "U"=>vrecule();recule();recule();recule();recule();recule();
                          ^